tests/haste_namespaces/haste_namespaces.exp
Error -------------------------------------------------------------------------------------------- common/Common.js:1:24

Cannot resolve module `NativeOnly`. [cannot-resolve-module]

   1| import { native } from "NativeOnly"; // error: common code cannot import native-only code
                             ^^^^^^^^^^^^


Error --------------------------------------------------------------------------------------------- common/Common.js:4:1

Cannot cast `web` to empty because string [1] is incompatible with empty [2]. [incompatible-cast]

   common/Common.js:4:1
   4| web as empty; // error: string ~> empty
      ^^^

References:
   web/WebOnly.js:6:27
   6| declare export const web: string;
                                ^^^^^^ [1]
   common/Common.js:4:8
   4| web as empty; // error: string ~> empty
             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------- common/JsConflict.js:1:1

Duplicate module provider for `JsConflict`. Change either the name of this file or the name of the current module
provider [1]. [duplicate-module]

   common/JsConflict.js:1:1
   1|
      

References:
   native/JsConflict.js:1:1
   1|
       [1]


Error ----------------------------------------------------------------------------------------- common/JsConflict.js:1:1

This file is being illegally shadowed by the js.flow file [1]. This file can only be shadowed by a js.flow file in the
same directory with the same base name. [duplicate-module]

   common/JsConflict.js:1:1
   1|
      

References:
   web/JsConflict.js.flow:1:1
   1|
       [1]


Error ------------------------------------------------------------------------------ common/JsFlowConflict1.js.flow:2:16

Cannot conform to common interface module because number [1] is incompatible with string [2] in property `default`. Read
the docs on Flow's multi-platform support for more information: https://flow.org/en/docs/react/multiplatform.
[incompatible-type]

   common/JsFlowConflict1.js.flow:2:16
   2| export default foo; // error: platform-specific impl file should conform to JsFlowConflict2.js.flow
                     ^^^

References:
   web/JsFlowConflict1.js:1:20
   1| declare const foo: number; // error in common interface file
                         ^^^^^^ [1]
   common/JsFlowConflict1.js.flow:1:20
   1| declare const foo: string;
                         ^^^^^^ [2]


Error ------------------------------------------------------------------------------ common/JsFlowConflict2.js.flow:2:16

Cannot conform to common interface module because number [1] is incompatible with string [2] in property `default`. Read
the docs on Flow's multi-platform support for more information: https://flow.org/en/docs/react/multiplatform.
[incompatible-type]

   common/JsFlowConflict2.js.flow:2:16
   2| export default foo; // error: platform-specific impl file should conform to JsFlowConflict2.js.flow
                     ^^^

References:
   web/JsFlowConflict2.js.flow:1:20
   1| declare const foo: number; // error in common interface file
                         ^^^^^^ [1]
   common/JsFlowConflict2.js.flow:1:20
   1| declare const foo: string;
                         ^^^^^^ [2]


Error -------------------------------------------------------------------------------------- common/Untyped2.js.flow:1:1

Duplicate module provider for `Untyped2`. Change either the name of this file or the name of the current module
provider [1]. [duplicate-module]

   common/Untyped2.js.flow:1:1
   1| // Error against web/Untypes2.js.flow, because we shouldn't have two js.flow file with the same Haste name
      

References:
   web/Untyped2.js.flow:1:1
   1| // @noflow
       [1]


Error ----------------------------------------------------------------------------------------- native/NativeOnly.js:4:1

Cannot cast `foo` to empty because string [1] is incompatible with empty [2]. [incompatible-cast]

   native/NativeOnly.js:4:1
   4| foo as empty; // error: string ~> empty
      ^^^

References:
   common/CommonLib.js:1:27
   1| declare export const foo: string;
                                ^^^^^^ [1]
   native/NativeOnly.js:4:8
   4| foo as empty; // error: string ~> empty
             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------- native/NativeOnly.js:8:8

Cannot resolve module `WebInCommon`. [cannot-resolve-module]

   8| import 'WebInCommon' // error: native code cannot import web code. This one tests the precedence rule in flowconfig
             ^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------- web/WebOnly.js:4:1

Cannot cast `foo` to empty because string [1] is incompatible with empty [2]. [incompatible-cast]

   web/WebOnly.js:4:1
   4| foo as empty; // error: string ~> empty
      ^^^

References:
   common/CommonLib.js:1:27
   1| declare export const foo: string;
                                ^^^^^^ [1]
   web/WebOnly.js:4:8
   4| foo as empty; // error: string ~> empty
             ^^^^^ [2]



Found 10 errors
